--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_storage: ^11.2.2
   flutter:
     sdk: flutter
+  flutter_staggered_grid_view: ^0.6.2
   flutter_svg: ^2.0.6
   image_picker: ^0.8.7+5
   jiffy: ^6.2.1
