--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,12 @@ dependencies:
   flutter_svg: ^2.0.6
   image_picker: ^0.8.7+5
   jiffy: ^6.2.1
+  path_provider: ^2.0.15
   provider: ^6.0.5
   uuid: ^3.0.7
+
+dependency_overrides:
+  http: ^1.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
